<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEFF1"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            <ImageView
                android:id="@+id/main.imageview.placeholder"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/drawer" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleView"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_width"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/icons_1"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                app:civ_border_color="@android:color/white"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/txtaccoutName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="bottom|center"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/circleView"
                android:text="Account Name"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/txtaccoutName"
                android:text="nhahang.cukcuk.vn"
                android:textColor="@android:color/white"
                android:textSize="20dp" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:background="#000" />

            <Button
                android:id="@+id/btnSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ECEFF1"
                android:drawableLeft="@drawable/ic_settings_black_24dp"
                android:drawablePadding="15dp"
                android:text="@string/setting"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:paddingLeft="15dp"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorTextTienIch"
                android:textSize="20dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:background="#000" />

            <Button
                android:id="@+id/btnSyn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ECEFF1"
                android:drawableLeft="@drawable/ic_cloud_download_black_24dp"
                android:drawablePadding="15dp"
                android:text="@string/syn"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:paddingLeft="15dp"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorTextTienIch"
                android:textSize="20dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:background="#000" />

            <Button
                android:id="@+id/btnImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ECEFF1"
                android:drawableLeft="@drawable/ic_photo_library_black_24dp"
                android:drawablePadding="15dp"
                android:text="@string/anh_thuc_don"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:paddingLeft="15dp"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorTextTienIch"
                android:textSize="20dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:background="#000" />

            <Button
                android:id="@+id/btnHistoryCooking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ECEFF1"
                android:drawableLeft="@drawable/ic_room_service_black_24dp"
                android:drawablePadding="15dp"
                android:text="@string/lich_su_bep_bar"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:paddingLeft="15dp"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorTextTienIch"
                android:textSize="20dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:background="#000" />

            <Button
                android:id="@+id/btnListInvoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ECEFF1"
                android:drawableLeft="@drawable/ic_event_note_black_24dp"
                android:drawablePadding="15dp"
                android:text="@string/syn"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:paddingLeft="15dp"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorTextTienIch"
                android:textSize="20dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="#000" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="#F8BBD0"
                android:text="Trợ giúp"
                android:textSize="25dp"
                android:gravity="center"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="#000" />

            <Button
                android:id="@+id/btnLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ECEFF1"
                android:drawableLeft="@drawable/ic_language_black_24dp"
                android:drawablePadding="15dp"
                android:text="@string/ngon_ngu"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:paddingLeft="15dp"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorTextTienIch"
                android:textSize="20dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:background="#000" />

            <Button
                android:id="@+id/btnNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ECEFF1"
                android:drawableLeft="@drawable/ic_notifications_black_24dp"
                android:drawablePadding="15dp"
                android:text="@string/thong_bao"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:paddingLeft="15dp"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorTextTienIch"
                android:textSize="20dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:background="#000" />

            <Button
                android:id="@+id/btnShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ECEFF1"
                android:drawableLeft="@drawable/ic_share_black_24dp"
                android:drawablePadding="15dp"
                android:text="@string/gioi_thieu"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:paddingLeft="15dp"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorTextTienIch"
                android:textSize="20dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:background="#000" />

            <Button
                android:id="@+id/btnRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ECEFF1"
                android:drawableLeft="@drawable/ic_stars_black_24dp"
                android:drawablePadding="15dp"
                android:text="@string/danh_gia"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:paddingLeft="15dp"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorTextTienIch"
                android:textSize="20dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:background="#000" />

            <Button
                android:id="@+id/btnFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ECEFF1"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawablePadding="15dp"
                android:text="@string/gop_y"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:paddingLeft="15dp"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorTextTienIch"
                android:textSize="20dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:background="#000" />

            <Button
                android:id="@+id/btnError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ECEFF1"
                android:drawableLeft="@drawable/ic_error_black_24dp"
                android:drawablePadding="15dp"
                android:text="@string/thong_bao_loi"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:paddingLeft="15dp"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorTextTienIch"
                android:textSize="20dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:background="#000" />

            <Button
                android:id="@+id/btnInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ECEFF1"
                android:drawableLeft="@drawable/ic_info_black_24dp"
                android:drawablePadding="15dp"
                android:text="@string/thong_tin"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:paddingLeft="15dp"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorTextTienIch"
                android:textSize="20dp" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
